# Real-Time-Chat

./: .env.example  .gitignore  app.py  database.py  model.py  pyproject.toml  utils.py
controllers/: auth.py
static/css/: auth.css  home.css
static/js/: client.js
templates/: index.html  layout.html  login.html  signup.html
