[tool.poetry]
name = "real-time-chat"
version = "0.1.0"
description = ""
authors = ["sendervision <sendervision@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
python-dotenv = "^1.0.1"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
